fix: flyout action alignment

--- a/packages/flyout/src/presenters/FlyoutPresenter.scss
+++ b/packages/flyout/src/presenters/FlyoutPresenter.scss
@@ -6,6 +6,10 @@
   display: inline-block;
 }
 
+.hig__flyout-v1__action {
+  display: flex;
+}
+
 .hig__flyout-v1__container {
   @import "../tokens.scss";
 
